# infodb-cli

./: README.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
create-myproj/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  rslib.config.ts  tsconfig.json
create-myproj/src/: index.ts
create-myproj/template-common/: README.md
create-myproj/template-react-ts/: package.json  rspack.config.js
create-myproj/template-tanstack-router/: package.json  rsbuild.config.ts  tailwind.config.js
create-myts/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
create-myts/src/: index.ts
infodb-cli(deprecated)/: package.json
infodb-cli(deprecated)/src/: cli.js  es.js  minify.js  pack.js  resolver.js  runall.js  serve.js  shell.js  template.js  verup.js
lctl/: .eslintrc.js  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
licscan/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
licscan/check/: package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
revx/: .gitignore  README.md  README_ja.md  package.json  tsconfig.json
src/: build.js  cli.js  docker.js  docview.js  es.js  gitsync.js  init.js  nbenv.js  serve.js  shell.js
tfme/: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
worktree/: CLAUDE.md  README.md  README_ja.md  package.json  pnpm-lock.yaml
(+78 files in other folders)
