[tool.poetry]
name = "check-project"
version = "0.1.0"
description = "Test project for licscan"
authors = ["Test <test@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
graphql-py = {git = "https://github.com/tamuto/graphql-py", rev = "master"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
